Fix FreezeRestoreStressIT for Java 8 compatibility
https://claude.ai/code/session_01UHzJZuUdL5vpz2QML1dc1f